@@ -67,6 +67,10 @@ class DLM_Custom_Columns {
 				/** @var DLM_Download_Version $file */
 				$file = $download->get_version();
 
+				if ( ! $wp_list_table ) {
+					$wp_list_table = _get_list_table( 'WP_Posts_List_Table' );
+				}
+
 				$wp_list_table->column_title( $post );
 
 				if ( $file->get_filename() ) {
