@@ -1,5 +1,9 @@
 = 4.5.93 - TBA =
 Fixed: Robots.txt check on all pages ( https://github.com/WPChill/download-monitor/issues/937 )
+Added: "No file provided" notification in download admin listing for "empty" downloads ( https://github.com/WPChill/download-monitor/issues/887 )
+Added: Product ID in admin DLM products listing ( https://github.com/WPChill/download-monitor/issues/885 )
+Fixed: Downloads hanging at 99% in multi-threaded mode ( https://github.com/WPChill/download-monitor/issues/816 )
+Fixed: Critical error on quick-editing a Download/Product ( https://github.com/WPChill/download-monitor/issues/906 )
 
 = 4.5.92 - 11.04.2022 =
 Fixed: Missing Files/Access denied for users with out of root wp-content ( https://github.com/WPChill/download-monitor/issues/888 )
